--- a/index.ipynb
+++ b/index.ipynb
@@ -715,7 +715,7 @@
    "source": [
     "# Your code here\n",
     "q = \"\"\"\n",
-    "SELECT MAX(year) - MIN(year) AS total_years\n",
+    "SELECT COUNT(*) AS total_years\n",
     "    FROM babe_ruth_stats;\n",
     "\"\"\"\n",
     "\n",
@@ -1737,7 +1737,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
